TodoFX Datenbank SQlite findAll

--- a/TodoFX_v03/pom.xml
+++ b/TodoFX_v03/pom.xml
@@ -45,7 +45,12 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.51.0.0</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <version>8.0.33</version>-->
+<!--        </dependency>-->
 
 
     </dependencies>
